--- a/index.html
+++ b/index.html
@@ -582,13 +582,13 @@
                     <a href="#" class="text-gray-400 hover:text-primary transition-colors">
                         <i class="fab fa-twitter text-xl"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-primary transition-colors">
+                    <a href="https://github.com/hubert-pro/" class="text-gray-400 hover:text-primary transition-colors">
                         <i class="fab fa-github text-xl"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-primary transition-colors">
+                    <a href="https://www.linkedin.com/in/hubertusog/" class="text-gray-400 hover:text-primary transition-colors">
                         <i class="fab fa-linkedin-in text-xl"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-primary transition-colors">
+                    <a href="https://www.instagram.com/hubertus_monachus/" class="text-gray-400 hover:text-primary transition-colors">
                         <i class="fab fa-instagram text-xl"></i>
                     </a>
                 </div>
